; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_scan.c_menu_cbs_init_bind_scan_compare_type.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_scan.c_menu_cbs_init_bind_scan_compare_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@action_switch_thumbnail = common dso_local global i32 0, align 4
@action_scan_directory = common dso_local global i32 0, align 4
@action_scan_file = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @menu_cbs_init_bind_scan_compare_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @menu_cbs_init_bind_scan_compare_type(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %11 [
    i32 128, label %6
    i32 130, label %10
  ]

6:                                                ; preds = %2
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* @action_switch_thumbnail, align 4
  %9 = call i32 @BIND_ACTION_SCAN(i32* %7, i32 %8)
  br label %12

10:                                               ; preds = %2
  br label %11

11:                                               ; preds = %2, %10
  br label %12

12:                                               ; preds = %11, %6
  ret i32 -1
}

declare dso_local i32 @BIND_ACTION_SCAN(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
